--- a/appveyor.yml
+++ b/appveyor.yml
@@ -110,12 +110,24 @@ environment:
       ENABLE_CURVE: ON
       CMAKE_GENERATOR: "MSYS Makefiles"
       ARTIFACT_NAME: mingw64
+    - platform: Win32-uwp
+      configuration: Debug
+      WITH_LIBSODIUM: OFF
+      ENABLE_CURVE: OFF
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      CMAKE_GENERATOR: "Visual Studio 15 2017"
+      MSVCVERSION: "v141"
+      MSVCYEAR: "vs2017"
+      ARTIFACT_NAME: v141-x86-uwp
+      CMAKE_SYSTEM: WindowsStore
+      CMAKE_SYSTEM_VERSION: 10.0.18362
 
 matrix:
   fast_finish: false
   allow_failures:
     - platform: cygwin64 # TODO allow failures until tests are fixed
     - platform: mingw64  # TODO allow failures until tests are fixed
+    - platform: Win32-uwp  # TODO allow failures until tests are fixed
 
 init:
   - cmd: if "%NO_PR%"=="TRUE" (
@@ -139,6 +151,7 @@ install:
   - cmd: if "%Platform%"=="mingw64" C:\msys64\usr\bin\bash -lc "pacman -Qg"
   - cmd: if "%Platform%"=="mingw64" set PATH=C:\msys64\usr\bin;%PATH%
   - cmd: if "%Platform%"=="x64" set "CMAKE_GENERATOR=%CMAKE_GENERATOR% Win64"
+  - cmd: if "%Platform%"=="Win32-uwp" set "CMAKE_GENERATOR=%CMAKE_GENERATOR% -DCMAKE_SYSTEM=%CMAKE_SYSTEM% -DCMAKE_SYSTEM_VERSION=%CMAKE_SYSTEM_VERSION%"
   - cmd: echo "Generator='%CMAKE_GENERATOR%'"
   - cmd: echo "Platform='%Platform%'"
   - cmd: if "%WITH_LIBSODIUM%"=="ON" set LIBSODIUMDIR=C:\projects\libsodium
