--- a/appveyor.yml
+++ b/appveyor.yml
@@ -151,7 +151,7 @@ install:
   - cmd: if "%Platform%"=="mingw64" C:\msys64\usr\bin\bash -lc "pacman -Qg"
   - cmd: if "%Platform%"=="mingw64" set PATH=C:\msys64\usr\bin;%PATH%
   - cmd: if "%Platform%"=="x64" set "CMAKE_GENERATOR=%CMAKE_GENERATOR% Win64"
-  - cmd: if "%Platform%"=="Win32-uwp" set "CMAKE_GENERATOR=%CMAKE_GENERATOR% -DCMAKE_SYSTEM=%CMAKE_SYSTEM% -DCMAKE_SYSTEM_VERSION=%CMAKE_SYSTEM_VERSION%"
+  - cmd: if "%Platform%"=="Win32-uwp" set "CMAKE_GENERATOR=%CMAKE_GENERATOR%" -DCMAKE_SYSTEM=%CMAKE_SYSTEM% -DCMAKE_SYSTEM_VERSION=%CMAKE_SYSTEM_VERSION%""
   - cmd: echo "Generator='%CMAKE_GENERATOR%'"
   - cmd: echo "Platform='%Platform%'"
   - cmd: if "%WITH_LIBSODIUM%"=="ON" set LIBSODIUMDIR=C:\projects\libsodium
